# Makina

./: .gitignore  ProjectMakina.code-workspace  ProjectMakina.flaxproj  ProjectMakina.sln  README.md  omnisharp.json
Cache/: VulkanPipeline.cache  VulkanValidation.cache  WindowsLayout.xml  version
Cache/Projects/: BuildScripts.csproj  Flax.Build.CSharp.SkipBuild.targets  Flax.Build.CSharp.targets
Cache/Projects/Properties/: launchSettings.json
Cache/Shaders/Cache/: CacheVersion
Cache/Shaders/Debug/: ShaderDebug_AtmospherePreCompute_000007d0eb546e010000004100000065.txt  ShaderDebug_BitonicSort_0000044c3e3734d50000004200000074.txt  ShaderDebug_Circle Brush Material_e02ff2994722670583ec7391f3b2ccbc.txt  (+49 more)
Content/: GameSettings.json
Content/Prefabs/: Controller.prefab  PlayerCharacter.prefab
Content/Scenes/: Main.scene  Testing.scene
Content/Settings/: Android Platform Settings.json  Audio Settings.json  Build Settings.json  Graphics Settings.json  Input Settings.json  Layers And Tags Settings.json  Linux Platform Settings.json  Localization Settings.json  Navigation Settings.json  Network Settings.json  Physics Settings.json  Streaming Settings.json  Time Settings.json  UWP Platform Settings.json  Windows Platform Settings.json
Content/Sounds/: Error.flax
Engine/: .gitignore  CMakeLists.txt  Engine.cpp  Engine.hpp
Engine/Components/Window/: Window.hpp
Logs/: Log_2024_05_13_19_33_03.txt
Source/: Game.Gen.cs  Game.csproj  GameEditorTarget.Build.cs
Source/Properties/: launchSettings.json
source/: CMakeLists.txt  Makina.proginfo
(+93 files in other folders)
